--- a/exercicio1.html
+++ b/exercicio1.html
@@ -3,32 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verificar Par ou Ímpar</title>
+    <title>Exercício</title>
 </head>
-
 <body>
-
-    <h1> Exercício 1 - Verifica se um número é Par ou ímpar</h1>
-
-
+    <h1>Exercício de Verificação de Número Par ou Ímpar</h1>
+    
     <script>
         let numero;
+        let inputValido = false;
 
-        do {
-            numero = prompt("Informe um número positivo inteiro.");
-            numero = parseInt(numero);
+        while (!inputValido) {
+            let entrada = prompt("Por favor, insira um número inteiro positivo:");
 
-            if (isNaN(numero) || numero <= 0){
-                alert("Entrada Inválida. Por favor insira novamento um número inteiro positivo")
+            if (entrada === null) {
+                alert("Operação cancelada.");
+                window.location.href = 'index.html';
+                break;
             }
-        } while (isNaN(numero) || numero <= 0);
 
-        if (numero % 2 === 0){
-            alert("O número é par.");
-        } else {
-            alert("O número é impar.");
+            numero = parseInt(entrada);
+
+            if (!isNaN(numero) && numero > 0) {
+                inputValido = true;
+            } else {
+                alert("Entrada inválida. Por favor, insira um número inteiro positivo.");
+            }
         }
 
+        if (inputValido) {
+            if (numero % 2 === 0) {
+                alert("O número é par.");
+            } else {
+                alert("O número é ímpar.");
+            }
+        }
     </script>
+    <button onclick="window.location.href='index.html'">Voltar à Página Principal</button>
 </body>
 </html>
