--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="exercicio1.html">Exercício 1: Verificar Par ou Ímpar</a></li>
         <li><a href="exercicio2.html">Exercício 2: Verifica Número Primo</a></li>
+        <li><a href="exercicio3.html">Exercício 2: Calcula fatorial de um Número</a></li>
     </ul>
 </body>
 </html>
