--- a/exercicio3.html
+++ b/exercicio3.html
@@ -26,13 +26,13 @@
         function promptUser() {
             let userInput = prompt("Digite um número inteiro positivo:");
 
-            if (userInput === null) return; // Se o usuário cancelar a entrada
+            if (userInput === null) return; 
 
             let number = parseInt(userInput, 10);
 
             if (isNaN(number) || number < 0) {
                 alert("Por favor, digite um número inteiro positivo.");
-                promptUser(); // Solicitar novamente se a entrada for inválida
+                promptUser(); 
             } else {
                 let result = calculateFactorial(number);
                 alert("O fatorial de " + number + " é " + result + ".");
