Atividade 1 - Organizalçao e Correções

--- a/atv1/index.html
+++ b/atv1/index.html
@@ -10,7 +10,8 @@
     <ul>
         <li><a href="exercicio1.html">Exercício 1: Verificar Par ou Ímpar</a></li>
         <li><a href="exercicio2.html">Exercício 2: Verifica Número Primo</a></li>
-        <li><a href="exercicio3.html">Exercício 2: Calcula fatorial de um Número</a></li>
+        <li><a href="exercicio3.html">Exercício 3: Calcula fatorial de um Número</a></li>
+        <li><a href="exercicio4.html">Exercício 4: Verifica Dado</a></li>
     </ul>
 </body>
 </html>
