--- a/atv1/exercicio1.html
+++ b/atv1/exercicio1.html
@@ -3,11 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício</title>
+    <title>Exercício de Verificação de Número Par ou Ímpar</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #2c3e50; /* Cinza escuro */
+            color: #ecf0f1; /* Texto claro */
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 1rem;
+            color: #ecf0f1;
+            background-color: #3498db; 
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 20px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        button:hover {
+            background-color: #2980b9; 
+        }
+
+        button:active {
+            background-color: #1f2a38;
+        }
+    </style>
 </head>
 <body>
     <h1>Exercício de Verificação de Número Par ou Ímpar</h1>
-    
+
     <script>
         let numero;
         let inputValido = false;
