--- a/atv1/exercicio2.html
+++ b/atv1/exercicio2.html
@@ -4,6 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificador de Número Primo</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #27ae60; 
+            color: #ffffff; 
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 1rem;
+            color: #ffffff;
+            background-color: #2980b9;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin: 10px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        button:hover {
+            background-color: #1f2a38; 
+        }
+
+        button:active {
+            background-color: #34495e; 
+        }
+
+        #checkPrimeBtn {
+            background-color: #3498db; 
+        }
+
+        #checkPrimeBtn:hover {
+            background-color: #2980b9; 
+        }
+
+        #checkPrimeBtn:active {
+            background-color: #1f2a38;
+        }
+    </style>
 </head>
 <body>
     <h1>Verifique se um número é primo</h1>
