--- a/atv1/exercicio4.html
+++ b/atv1/exercicio4.html
@@ -4,6 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificador de Tipo de Dado</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f9f9a0; 
+            color: #333333; 
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 1.2rem;
+            margin: 10px 0;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 1rem;
+            color: #ffffff;
+            background-color: #f39c12; 
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 20px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        button:hover {
+            background-color: #e67e22; 
+        }
+
+        button:active {
+            background-color: #d35400; 
+        }
+    </style>
 </head>
 <body>
     <h1>Verificador de Tipo de Dado</h1>
@@ -19,7 +63,6 @@
             if (confirmation) {
                 let dataType = typeof userInput;
 
-                
                 if (!isNaN(userInput) && userInput.trim() !== "") {
                     dataType = "Number";
                 }
