--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercícios de JavaScript - Atividade 1</title>
+    <title>Exercícios de JavaScript - Atividade 2</title>
     <style>
         body {
             display: flex;
@@ -11,56 +11,43 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            color: #ffffff; 
-            font-family: 'Arial', sans-serif;
+            background-color: #2c3e50; /* Cinza escuro */
+            color: #ecf0f1; /* Texto claro */
+            font-family: Arial, sans-serif;
             text-align: center;
-            margin: 0;
-            background-color: #1e272e; 
         }
-
         h1 {
             font-size: 2.5rem;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+            color: #ecf0f1;
         }
-
         ul {
-            list-style: none;
+            list-style-type: none;
             padding: 0;
         }
-
-        ul li {
+        li {
             margin: 10px 0;
         }
-
         a {
             text-decoration: none;
-            color: #3498db; 
+            color: #3498db; /* Azul para links */
             font-size: 1.2rem;
-            border: 2px solid #3498db;
-            border-radius: 5px;
             padding: 10px 20px;
-            display: inline-block;
+            border-radius: 5px;
             transition: background-color 0.3s, color 0.3s;
         }
-
         a:hover {
             background-color: #3498db;
-            color: #ffffff;
-        }
-
-        a:active {
-            background-color: #2980b9;
-            color: #ffffff;
+            color: #fff;
         }
     </style>
 </head>
 <body>
-    <h1>Exercícios de JavaScript - Atividade 1</h1>
+    <h1>Exercícios de JavaScript - Atividade 2</h1>
     <ul>
-        <li><a href="exercicio1.html">Exercício 1: Verificar Par ou Ímpar</a></li>
-        <li><a href="exercicio2.html">Exercício 2: Verifica Número Primo</a></li>
-        <li><a href="exercicio3.html">Exercício 3: Calcula fatorial de um Número</a></li>
-        <li><a href="exercicio4.html">Exercício 4: Verifica Dado</a></li>
+        <li><a href="exercicio1.html">Data Atual</a></li>
+        <li><a href="exercicio2.html">Relógio</a></li>
+        <li><a href="exercicio3.html">Texto ou Não Palíndromo</a></li>
     </ul>
 </body>
 </html>
