--- a/exercicio1.html
+++ b/exercicio1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Atual Formatada</title>
+    <title>Exercício de Verificação de Número Par ou Ímpar</title>
     <style>
         body {
             display: flex;
@@ -11,67 +11,72 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
             background-color: #2c3e50; 
             color: #ecf0f1; 
-            font-family: Arial, sans-serif;
             text-align: center;
         }
+
         h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             margin-bottom: 20px;
-            color: #ecf0f1;
         }
-        #data {
-            font-size: 1.8rem;
-            font-weight: bold;
-            color: #ecf0f1;
-            margin-bottom: 30px;
-            background-color: #34495e;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        }
+
         button {
             padding: 10px 20px;
             font-size: 1rem;
-            color: #fff;
-            background-color: #3498db;
+            color: #ecf0f1;
+            background-color: #3498db; 
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            margin-top: 20px;
+            transition: background-color 0.3s, color 0.3s;
         }
+
         button:hover {
-            background-color: #2980b9;
+            background-color: #2980b9; 
+        }
+
+        button:active {
+            background-color: #1f2a38; 
         }
     </style>
 </head>
 <body>
-    <h1>Data Atual</h1>
-    <p id="data"></p>
-    
-    <button onclick="window.location.href='index.html'"> Voltar Página Principal</button>
+    <h1>Exercício de Verificação de Número Par ou Ímpar</h1>
 
     <script>
-        function formatarData(data) {
-            const diasDaSemana = [
-                'Domingo', 'Segunda-feira', 'Terça-feira', 'Quarta-feira',
-                'Quinta-feira', 'Sexta-feira', 'Sábado'
-            ];
-            const mesesDoAno = [
-                'janeiro', 'fevereiro', 'março', 'abril', 'maio', 'junho',
-                'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'
-            ];
+        let numero;
+        let inputValido = false;
 
-            const diaDaSemana = diasDaSemana[data.getDay()];
-            const dia = String(data.getDate()).padStart(2, '0');
-            const mes = mesesDoAno[data.getMonth()];
-            const ano = data.getFullYear();
+        while (!inputValido) {
+            let entrada = prompt("Por favor, insira um número inteiro positivo:");
 
-            return `${diaDaSemana}, ${dia} de ${mes} de ${ano}`;
+            if (entrada === null) {
+                alert("Operação cancelada.");
+                window.location.href = 'index.html';
+                break;
+            }
+
+            numero = parseInt(entrada);
+
+            if (!isNaN(numero) && numero > 0) {
+                inputValido = true;
+            } else {
+                alert("Entrada inválida. Por favor, insira um número inteiro positivo.");
+            }
         }
 
-        const dataAtual = new Date();
-        document.getElementById('data').innerText = formatarData(dataAtual);
+        if (inputValido) {
+            if (numero % 2 === 0) {
+                alert("O número é par.");
+            } else {
+                alert("O número é ímpar.");
+            }
+        }
     </script>
+    <button onclick="window.location.href='index1.html'">Voltar à Página Principal</button>
 </body>
 </html>
