--- a/exercicio2.html
+++ b/exercicio2.html
@@ -1,10 +1,9 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relógio em Tempo Real</title>
+    <title>Verificador de Número Primo</title>
     <style>
         body {
             display: flex;
@@ -12,128 +11,90 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #282c34;
-            color: #61dafb;
+            margin: 0;
             font-family: Arial, sans-serif;
+            background-color: #27ae60; 
+            color: #ffffff; 
             text-align: center;
         }
+
         h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             margin-bottom: 20px;
         }
-        #relogio {
-            font-size: 3rem;
-            font-weight: bold;
-            background-color: #20232a;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            margin-bottom: 20px;
-        }
+
         button {
             padding: 10px 20px;
-            background-color: #61dafb;
-            color: #282c34;
+            font-size: 1rem;
+            color: #ffffff;
+            background-color: #2980b9;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 1rem;
+            margin: 10px;
+            transition: background-color 0.3s, color 0.3s;
         }
+
         button:hover {
-            background-color: #21a1f1;
+            background-color: #1f2a38; 
+        }
+
+        button:active {
+            background-color: #34495e; 
+        }
+
+        #checkPrimeBtn {
+            background-color: #3498db; 
+        }
+
+        #checkPrimeBtn:hover {
+            background-color: #2980b9; 
+        }
+
+        #checkPrimeBtn:active {
+            background-color: #1f2a38;
         }
     </style>
 </head>
 <body>
-    <h1>Relógio em Tempo Real</h1>
-    <p id="relogio"></p>
-
-    <button onclick="window.location.href='index.html'">Voltar para Página Principal</button>
+    <h1>Verifique se um número é primo</h1>
+    <button id="checkPrimeBtn">Verificar Número Primo</button>
+    <button onclick="window.location.href='index1.html'">Voltar para Index</button>
 
     <script>
-        function atualizarRelogio() {
-            const dataAtual = new Date();
-            const horas = String(dataAtual.getHours()).padStart(2, '0');
-            const minutos = String(dataAtual.getMinutes()).padStart(2, '0');
-            const segundos = String(dataAtual.getSeconds()).padStart(2, '0');
+        function isPrime(number) {
+            if (number <= 1) return false;
+            if (number === 2) return true;
 
-            const horarioAtual = `${horas}:${minutos}:${segundos}`;
-            document.getElementById("relogio").innerText = horarioAtual;
-
-            setTimeout(atualizarRelogio, 1000);
+            const sqrt = Math.sqrt(number);
+            for (let i = 2; i <= sqrt; i++) {
+                if (number % i === 0) {
+                    return false;
+                }
+            }
+            return true;
         }
 
-        atualizarRelogio();
+        function promptUser() {
+            let userInput = prompt("Digite um número inteiro positivo:");
+
+            if (userInput === null) return;
+
+            let number = parseInt(userInput, 10);
+
+            if (isNaN(number) || number <= 0) {
+                alert("Por favor, digite um número inteiro positivo.");
+                promptUser();
+            } else {
+                if (isPrime(number)) {
+                    alert(number + " é um número primo.");
+                } else {
+                    alert(number + " não é um número primo.");
+                }
+            }
+        }
+
+        document.getElementById('checkPrimeBtn').addEventListener('click', promptUser);
     </script>
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relógio em Tempo Real</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #282c34;
-            color: #61dafb;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
-        #relogio {
-            font-size: 3rem;
-            font-weight: bold;
-            background-color: #20232a;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            margin-bottom: 20px;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: #61dafb;
-            color: #282c34;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1rem;
-        }
-        button:hover {
-            background-color: #21a1f1;
-        }
-    </style>
-</head>
-<body>
-    <h1>Relógio em Tempo Real</h1>
-    <p id="relogio"></p>
-
-    <button onclick="window.location.href='index.html'">Voltar para Página Principal</button>
-
-    <script>
-        function atualizarRelogio() {
-            const dataAtual = new Date();
-            const horas = String(dataAtual.getHours()).padStart(2, '0');
-            const minutos = String(dataAtual.getMinutes()).padStart(2, '0');
-            const segundos = String(dataAtual.getSeconds()).padStart(2, '0');
-
-            const horarioAtual = `${horas}:${minutos}:${segundos}`;
-            document.getElementById("relogio").innerText = horarioAtual;
-
-            setTimeout(atualizarRelogio, 1000);
-        }
-
-        atualizarRelogio();
-    </script>
-</body>
-</html>
->>>>>>> cafe1d534f37374596fb29381a67f27f828f5d5b
