--- a/index.html
+++ b/index.html
@@ -3,51 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercícios de JavaScript - Atividade 2</title>
+    <title>Exercícios de JavaScript</title>
     <style>
         body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #2c3e50; /* Cinza escuro */
-            color: #ecf0f1; /* Texto claro */
+            background-color: #f0f0f0; 
+            color: #333;
             font-family: Arial, sans-serif;
             text-align: center;
+            padding: 20px;
+            margin: 0;
         }
         h1 {
-            font-size: 2.5rem;
-            margin-bottom: 30px;
-            color: #ecf0f1;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            margin: 10px 0;
+            font-size: 2rem;
+            margin-bottom: 20px;
         }
         a {
+            display: block;
+            margin: 10px 0;
+            color: #007bff;
             text-decoration: none;
-            color: #3498db; /* Azul para links */
             font-size: 1.2rem;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
         }
         a:hover {
-            background-color: #3498db;
-            color: #fff;
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <h1>Exercícios de JavaScript - Atividade 2</h1>
+    <h1>Selecione a Atividade</h1>
     <ul>
-        <li><a href="exercicio1.html">Data Atual</a></li>
-        <li><a href="exercicio2.html">Relógio</a></li>
-        <li><a href="exercicio3.html">Texto ou Não Palíndromo</a></li>
+        <li><a href="atv1/index1.html">Atividade 1</a></li>
+        <li><a href="atv2/index2.html">Atividade 2</a></li>
     </ul>
 </body>
 </html>
