Correçoes Atividades - Estilos

--- a/atv2/index2.html
+++ b/atv2/index2.html
@@ -48,6 +48,7 @@
         <li><a href="exercicio5.html">Data Atual</a></li>
         <li><a href="exercicio6.html">Relógio</a></li>
         <li><a href="exercicio7.html">Texto ou Não Palíndromo</a></li>
+        <li><a href="../index.html">Voltar à Página de Atividades</a></li>
     </ul>
 </body>
 </html>
