--- a/atv1/index1.html
+++ b/atv1/index1.html
@@ -61,6 +61,7 @@
         <li><a href="exercicio2.html">Exercício 2: Verifica Número Primo</a></li>
         <li><a href="exercicio3.html">Exercício 3: Calcula fatorial de um Número</a></li>
         <li><a href="exercicio4.html">Exercício 4: Verifica Dado</a></li>
+        <li><a href="../index.html">Voltar à página de Atividades</a></li>
     </ul>
 </body>
 </html>
