--- a/index.html
+++ b/index.html
@@ -6,26 +6,37 @@
     <title>Exercícios de JavaScript</title>
     <style>
         body {
-            background-color: #f0f0f0; 
-            color: #333;
-            font-family: Arial, sans-serif;
+            background-color: #2c3e50; 
+            color: #ecf0f1;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
             text-align: center;
             padding: 20px;
             margin: 0;
         }
         h1 {
-            font-size: 2rem;
-            margin-bottom: 20px;
+            font-size: 2.5rem;
+            margin-bottom: 30px;
+            color: #ecf0f1;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin: 15px 0;
         }
         a {
-            display: block;
-            margin: 10px 0;
-            color: #007bff;
+            color: #3498db; 
             text-decoration: none;
-            font-size: 1.2rem;
+            font-size: 1.5rem;
+            padding: 10px 20px;
+            border: 2px solid #3498db;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
         }
         a:hover {
-            text-decoration: underline;
+            background-color: #3498db; 
+            color: #ecf0f1;
         }
     </style>
 </head>
