--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <ul>
         <li><a href="atv1/index1.html">Atividade 1</a></li>
         <li><a href="atv2/index2.html">Atividade 2</a></li>
+        <li><a href="atv3/index3.html">Atividade 3</a></li>
     </ul>
 </body>
 </html>
