--- a/atv3/index3.html
+++ b/atv3/index3.html
@@ -6,18 +6,25 @@
     <title>Índice de Exercícios</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #2c3e50; 
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            color: #ecf0f1; 
+            background-color: #2c3e50; /* Cinza escuro */
+            color: #ecf0f1; /* Texto claro */
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 30px;
+            color: #ecf0f1;
         }
 
         ul {
-            list-style: none;
+            list-style-type: none;
             padding: 0;
         }
 
@@ -27,30 +34,24 @@
 
         a {
             text-decoration: none;
-            padding: 12px 25px;
-            background-color: #e74c3c;
-            color: #ffffff;
-            border-radius: 8px;
-            font-size: 1.1rem;
-            font-weight: bold;
-            transition: background-color 0.3s, transform 0.3s;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            color: #3498db; /* Azul para links */
+            font-size: 1.2rem;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
         }
 
         a:hover {
-            background-color: #c0392b;
-            transform: scale(1.05); 
-        }
-
-        a:active {
-            background-color: #a93226; 
-            transform: scale(1); 
+            background-color: #3498db;
+            color: #fff;
         }
     </style>
 </head>
 <body>
+    <h1>Índice de Exercícios</h1>
     <ul>
         <li><a href="exercicio8.html">Exercício 8: Inserção Dinâmica e Ordenada</a></li>
+        <li><a href="../index.html">Voltar à página de Atividades</a></li>
     </ul>
 </body>
 </html>
