--- a/atv3/exercicio8.html
+++ b/atv3/exercicio8.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #1b1b1b; /* Fundo cinza escuro */
-            color: #ecf0f1; /* Texto claro */
+            background-color: #1b1b1b; 
+            color: #ecf0f1;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -20,7 +20,7 @@
         h1 {
             font-size: 2.5rem;
             margin-bottom: 20px;
-            color: #f39c12; /* Laranja destaque */
+            color: #f39c12; 
             text-transform: uppercase;
             letter-spacing: 2px;
             font-weight: bold;
@@ -39,8 +39,8 @@
             border: none;
             border-radius: 50px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            background-color: #34495e; /* Fundo do input */
-            color: #ecf0f1; /* Texto do input */
+            background-color: #34495e; 
+            color: #ecf0f1; 
             transition: box-shadow 0.3s;
         }
 
@@ -64,7 +64,7 @@
 
         button:hover {
             background-color: #2980b9;
-            transform: translateY(-3px); /* Efeito de elevação ao passar o mouse */
+            transform: translateY(-3px); 
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
 
@@ -76,7 +76,7 @@
         ol {
             width: 80%;
             max-width: 600px;
-            background-color: #2c3e50; /* Fundo da lista */
+            background-color: #2c3e50; 
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -87,7 +87,7 @@
             font-size: 1.2rem;
             padding: 10px;
             margin: 5px 0;
-            background-color: #34495e; /* Fundo dos itens da lista */
+            background-color: #34495e; 
             border-radius: 5px;
             box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
             list-style: none;
