--- a/atv3/index3.html
+++ b/atv3/index3.html
@@ -11,8 +11,8 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #2c3e50; /* Cinza escuro */
-            color: #ecf0f1; /* Texto claro */
+            background-color: #2c3e50; 
+            color: #ecf0f1; 
             font-family: Arial, sans-serif;
             text-align: center;
         }
@@ -34,7 +34,7 @@
 
         a {
             text-decoration: none;
-            color: #3498db; /* Azul para links */
+            color: #3498db; 
             font-size: 1.2rem;
             padding: 10px 20px;
             border-radius: 5px;
