--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a href="atv2/index2.html">Atividade 2</a></li>
         <li><a href="atv3/index3.html">Atividade 3</a></li>
         <li><a href="atv4/index4.html">Atividade 4</a></li>
+        <li><a href="atv5/index5.html">Atividade 5</a></li>
     </ul>
 </body>
 </html>
