--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="atv3/index3.html">Atividade 3</a></li>
         <li><a href="atv4/index4.html">Atividade 4</a></li>
         <li><a href="atv5/index5.html">Atividade 5</a></li>
-        <li><a href="atv6/teste.html">Atividade 6</a></li>
+        <li><a href="atv6/index6.html">Atividade 6</a></li>
     </ul>
 </body>
 </html>
